# GC-Ultimate

./: .gitignore  .gitmodules  LICENSE.md  README.md
CAD/: GatePlate Blank.step  GatePlateOctagon.step  GatePlateRound.step
CAD/IGES/: A Button Bald.iges  B Button Bald.iges  CaptureButton.iges  GC Ultimate Mold Notes.txt  GC_Split_Dpad.iges  GatePlateOctagon.iges  GatePlateRound.iges  HomeButton.iges  Kailh_Stem.iges  LightPipe.iges  MechTriggerBracket.iges  MembraneTriggerHolder.iges  MinusButton.iges  PlusButton.iges  SyncButton.iges  Trigger L.iges  Trigger R.iges  X Button Bald.iges  Y Button Bald.iges  ZL Button.iges  ZR Button.iges
CAD/JOYSTICK/: Main_Body.iges  Main_Body.step  Main_Rubber.iges  Main_Rubber.step  Sub_Body.iges  Sub_Body.step  Sub_Rubber.iges  Sub_Rubber.step  VERSION DATE.txt
CAD/Legacy Step/: GatePlate Octagon.step  GatePlate Round.step  MembraneTriggerHolder.step
CAD/MOLD SET/: MOLD_WALL.stl
CAD/Printable/: CStickBase.stl  CStickRubber.stl  Kailh Stem.stl  L Trigger.stl  Light Pipe.stl  Mechanical Trigger Bracket.stl  Membrane Trigger Holder.stl  Octagonal Gateplate.stl  R Trigger.stl  Round Gateplate.stl  Split Dpad.stl  StickBase.stl  StickRubber.stl  Top Shell.stl  ZL Button.stl  ZR Button.stl
CAD/Prototype/: Trigger Bracket.step
CAD/R3 Shell/: GC Trigger Kailh Stem.step  HomeButton.step  NuMechTriggerBracket.step
CAD/R4 Shell/: CaptureButton.step  LightPipe.step  NuMechTriggerBracket.step
CAD/STEP/: A Button Bald.iges  A Button Bald.step  B Button Bald.iges  B Button Bald.step  CaptureButton.iges  CaptureButton.step  GC Trigger Kailh Stem.step  GC_Split_Dpad.iges  GC_Split_Dpad.step  GatePlateOctagon.iges  GatePlateOctagon.step  GatePlateRound.iges  GatePlateRound.step  HomeButton.iges  HomeButton.step  Kailh_Stem.iges  Kailh_Stem.step  LightPipe.iges  LightPipe.step  MechTriggerBracket.iges  MechTriggerBracket.step  MembraneTriggerHolder.iges  MembraneTriggerHolder.step  MinusButton.iges  MinusButton.step  PlusButton.iges  PlusButton.step  SyncButton.iges  SyncButton.step  Trigger L.iges  Trigger L.step  Trigger R.iges  Trigger R.step  VERSION DATE.txt  X Button Bald.iges  X Button Bald.step  Y Button Bald.iges  Y Button Bald.step  ZL Button.iges  ZL Button.step  (+2 more)
CAD/STL/: GatePlateOctagon.stl  GatePlateRound.stl  MainStickFull.stl  (+2 more)
FW/: CMakeLists.txt  GCULTIMATE_R4K_RP2040_manifest.json  GCULTIMATE_R4_RP2040_manifest.json  GCULTIMATE_RP2040_manifest.json  README.md  manifest.cmake  manifest.json
FW/include/: app_imu.h  app_rumble.h  board_config.h  main.h  snd_drum.h
FW/src/: app_hwtest.c  app_imu.c  app_rumble.c  app_rumble_dualhaptic.c  app_rumble_haptic.c  main.c
Regulatory/: GC Ultimate Block Diagram.drawio  GCU_FCC_LABEL.dxf
(+497 files in other folders)
